==> muramura/ardupilot/libraries/AP_HAL_ESP32/Util.cpp <==
#include <AP_HAL/AP_HAL.h>
#include <AP_Math/AP_Math.h>
#include "Util.h"
#include "RCOutput.h"
#include <AP_ROMFS/AP_ROMFS.h>
#include "SdCard.h"
#include <esp_timer.h>
#include <multi_heap.h>
#include <esp_heap_caps.h>
#include <driver/gpio.h>
#include <driver/ledc.h>
#include <stdlib.h>
#include <string.h>
#include "esp_log.h"
#include "esp_system.h"
#include "esp_heap_caps.h"
#include <AP_Common/ExpandingString.h>
#include "esp_mac.h"

void* Util::malloc_type(size_t size, AP_HAL::Util::Memory_Type mem_type)
{

    // https://docs.espressif.com/projects/esp-idf/en/v4.0.2/api-reference/system/mem_alloc.html
    // esp32 has DRAM, IRAM and D/IRAM that can be used as either

    /*
    DRAM (Data RAM) is memory used to hold data. This is the most common kind of memory accessed as heap.

    IRAM (Instruction RAM) usually holds executable data only. If accessed as generic memory, all accesses must be 32-bit aligned.

    D/IRAM is RAM which can be used as either Instruction or Data RAM.
    */

    //The ESP-IDF malloc() implementation internally calls heap_caps_malloc(size, MALLOC_CAP_8BIT) in order to allocate DRAM that is byte-addressable.

    //For most purposes, the standard libc malloc() and free() functions can be used for heap allocation without any special consideration.
    //	return malloc(size);

    if (mem_type == AP_HAL::Util::MEM_DMA_SAFE) {
        return heap_caps_calloc(1, size, MALLOC_CAP_DMA);
        //} else if (mem_type == AP_HAL::Util::MEM_FAST) {
        //   return heap_caps_calloc(1, size, MALLOC_CAP_32BIT); //WARNING 32bit memory cannot use unless 32bit access
    } else {
        return heap_caps_calloc(1, size, MALLOC_CAP_8BIT);
    }
}

bool Util::toneAlarm_init(uint8_t types)
{
    // AP_Notify::BuzzerType::BUILTIN is bit 0. Keep AP_Notify out of the HAL.
    if ((types & TONEALARM_TYPE_BUILTIN) == 0) {
        _toneAlarm_initialized = false;
        return true;
    }

    ledc_timer_config_t timer_config {};
    timer_config.speed_mode = TONEALARM_LEDC_MODE;
    timer_config.timer_num = TONEALARM_LEDC_TIMER;
    timer_config.duty_resolution = TONEALARM_LEDC_RESOLUTION;
    timer_config.freq_hz = TONEALARM_DEFAULT_FREQUENCY_HZ;
    timer_config.clk_cfg = LEDC_AUTO_CLK;

    if (ledc_timer_config(&timer_config) != ESP_OK) {
        return false;
    }

    ledc_channel_config_t channel_config {};
    channel_config.gpio_num = HAL_ESP32_TONEALARM_PIN;
    channel_config.speed_mode = TONEALARM_LEDC_MODE;
    channel_config.channel = TONEALARM_LEDC_CHANNEL;
    channel_config.intr_type = LEDC_INTR_DISABLE;
    channel_config.timer_sel = TONEALARM_LEDC_TIMER;
    channel_config.duty = 0;
    channel_config.hpoint = 0;

    if (ledc_channel_config(&channel_config) != ESP_OK) {
        return false;
    }

    _toneAlarm_initialized = true;
    return true;
}

void Util::toneAlarm_set_buzzer_tone(float frequency, float volume, uint32_t duration_ms)
{
    if (!_toneAlarm_initialized) {
        return;
    }

    (void)duration_ms;

    if (frequency <= 0.0f || volume <= 0.0f) {
        ledc_set_duty(TONEALARM_LEDC_MODE, TONEALARM_LEDC_CHANNEL, 0);
        ledc_update_duty(TONEALARM_LEDC_MODE, TONEALARM_LEDC_CHANNEL);
        return;
    }

    uint32_t frequency_hz = uint32_t(roundf(frequency));
    if (frequency_hz == 0) {
        frequency_hz = 1;
    }

#ifdef HAL_ESP32_TONEALARM_MIN_FREQ_HZ
    while (frequency_hz < HAL_ESP32_TONEALARM_MIN_FREQ_HZ) {
        frequency_hz *= 2U;
    }
#endif
#ifdef HAL_ESP32_TONEALARM_MAX_FREQ_HZ
    while (frequency_hz > HAL_ESP32_TONEALARM_MAX_FREQ_HZ) {
        frequency_hz /= 2U;
    }
#endif

    ledc_set_freq(TONEALARM_LEDC_MODE, TONEALARM_LEDC_TIMER, frequency_hz);

    const float volume_limited = volume > 1.0f ? 1.0f : volume;
    const uint32_t duty = uint32_t(roundf(volume_limited * TONEALARM_MAX_DUTY * 0.5f));
    ledc_set_duty(TONEALARM_LEDC_MODE, TONEALARM_LEDC_CHANNEL, duty);
    ledc_update_duty(TONEALARM_LEDC_MODE, TONEALARM_LEDC_CHANNEL);
}

bool Util::get_system_id(char buf[50])
{
    uint8_t base_mac_addr[6] = {0};
    esp_err_t ret = esp_efuse_mac_get_custom(base_mac_addr);
    if (ret != ESP_OK) {
        ret = esp_efuse_mac_get_default(base_mac_addr);
    }

#if defined(WIFI_SSID)
    snprintf(buf, 50, "WiFi SSID: %s_%02X%02X%02X",
             WIFI_SSID, base_mac_addr[3], base_mac_addr[4], base_mac_addr[5]);
#else
    snprintf(buf, 50, "WiFi SSID: StampFly_%02X%02X%02X",
             base_mac_addr[3], base_mac_addr[4], base_mac_addr[5]);
#endif
    buf[49] = 0;
    return true;
}
